# catkin_aubo

./: README.md
src/: text_base (另一个复件).txt  text_base (复件).txt  text_base.txt  text_obj.txt
src/aubo_demo/src/: MoveGroupInterface_To_Kinetic.cpp
src/aubo_description/urdf/: aubo_i5.urdf  aubo_i5.urdf.xacro  aubo_i5_robot.urdf.xacro
src/aubo_driver/: CMakeLists.txt
src/aubo_driver/src/: testAuboAPI.cpp
src/aubo_gazebo/urdf/: aubo_i5.xacro
src/aubo_i5_moveit_config/config/: joint_limits.yaml
src/aubo_i5_moveit_config/launch/: move_group.launch  moveit_planning_execution.launch
src/aubo_i5l_moveit_config/launch/: move_group.launch
src/robot_scanning/: CMakeLists.txt  README.md  package.xml  text_base.txt  text_obj.txt
src/robot_scanning/cfg/: scanning.yaml
src/robot_scanning/include/robot_scanning/: run_track_points.h  trans_matrix.h
src/robot_scanning/io_files/: text_base (复件).txt  text_base.txt  text_demo.txt  text_obj.txt
src/robot_scanning/launch/: run_track_points_moveit.launch
src/robot_scanning/src/: main_node.cpp  run_track_points.cpp  trans_matrix.cpp
